# gamemaker-client

./: .gitignore  gamemaker-client.yyp
dll/: Cargo.toml
dll/crates/gm_utils/: Cargo.toml
dll/crates/gm_utils/src/: __private.rs  buffer.rs  func.rs  lib.rs
dll/crates/gm_utils/src/parsing/: complete.rs  mod.rs  streaming.rs
dll/crates/gm_utils_macro/: Cargo.toml
dll/crates/gm_utils_macro/src/: lib.rs
dll/src/: lib.rs
extensions/CrystalExtension/: CrystalExtension.yy
objects/obj_crystalserver/: Create_0.gml  Other_68.gml  Step_0.gml  obj_crystalserver.yy
options/main/: options_main.yy
rooms/rm_main/: rm_main.yy
scripts/crystal_script/: crystal_script.gml  crystal_script.yy
