[package]
name = "crystal-dll"
version = "0.1.0"
edition = "2024"

[features]
default = []
debug = ["crystal-server/__dev"]

[lib]
crate-type = ["cdylib"]

[dependencies]
gm_utils = { path = "./crates/gm_utils" }
base64 = "0.22.1"
chrono = "0.4.39"
crystal-server = "0.1.0"
futures-util = "0.3.31"
tokio = { version = "1.43.0", features = [
    "rt-multi-thread",
    "time",
    "net",
    "sync",
] }
tracing-subscriber = "0.3.19"
parking_lot = "0.12.3"
